7132311: G1: assert((s == klass->oop_size(this)) || (Universe::heap()->is_gc_active() && ((is_typeArray()..

Move the check for when to call collect() to before we do a humongous object allocation

Reviewed-by: stefank, tonyp